---
title: SILVER — Datos operacionales y de referencia
---
erDiagram

    material_types {
        BIGSERIAL id PK
        TEXT code UK
        TEXT description
    }

    unspsc {
        BIGSERIAL id PK
        TEXT code UK
        TEXT description
    }

    classes {
        BIGSERIAL id PK
        TEXT code UK
        TEXT name
        BIGINT material_type_id FK
        BIGINT unspsc_id FK
        TEXT article_group
        TEXT sector
    }

    units_of_measure {
        BIGSERIAL id PK
        TEXT code UK
        TEXT description
    }

    materials {
        BIGSERIAL id PK
        TEXT code UK
        BIGINT class_id FK
        BIGINT unit_of_measure_id FK
        TEXT short_text "gin index pg_trgm"
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        BOOLEAN deletion_flag
    }

    conversations {
        UUID id PK
        TEXT title
        JSONB messages
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    requests {
        BIGSERIAL id PK
        UUID conversation_id FK
        BIGINT material_type_id FK
        TEXT name
        TEXT long_text
        JSONB specifications
        TEXT short_text
        TEXT article_group
        TEXT category
        NUMERIC confidence
        JSONB alternatives
        JSONB duplicates
        BOOLEAN auto_resolved
        BOOLEAN corrected
        TEXT status "proposal | confirmed | exported | discarded"
        TIMESTAMPTZ created_at
        TIMESTAMPTZ confirmed_at
        TIMESTAMPTZ exported_at
        NUMERIC processing_time_s
    }

    dataset_train {
        TEXT short_text
        BIGINT material_type_id FK
        TEXT article_group
    }

    dataset_test {
        TEXT short_text
        BIGINT material_type_id FK
        TEXT article_group
    }

    %% Relaciones
    material_types ||--o{ classes : "material_type_id"
    material_types ||--o{ requests : "material_type_id"
    material_types ||--o{ dataset_train : "material_type_id"
    material_types ||--o{ dataset_test : "material_type_id"
    unspsc ||--o{ classes : "unspsc_id"
    classes ||--o{ materials : "class_id"
    units_of_measure ||--o{ materials : "unit_of_measure_id"
    conversations ||--o{ requests : "conversation_id"
